html, css and js
amended wim Hof breathing exercise

--- a/exercise.html
+++ b/exercise.html
@@ -2,13 +2,14 @@
 <html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Breathing Exercise</title>
     <link rel="stylesheet" href="./styles/exercise.css">
 </head>
 <body>
     <div class="exercise-container">
         <div class="breathing-guide">
+            <div class="set-counter"></div>
             <div class="breath-animation">
                 <div class="circle">
                     <div class="breathing-indicator">
