--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Wim Hof Method</h2>
-                        <div class="timing">30-40x</div>
+                        <div class="timing">4-4-15</div>
                     </div>
                     <div class="card-back">
                         <p>Boost Your Resilience
