--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
             </div>
         </div>
     </main>
-<footer>
-    <div class="links">
-        <a href="/privacy.html">Privacy Policy</a>
-        <button id="feedback-btn">Share Feedback</button>
-    </div>
-</footer>
+    <footer>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <button id="feedback-btn">Share Feedback</button>
+        </div>
+    </footer>
 <script src="scripts/app.js"></script>
 </body>
 </html>
