adding privacy policy and terms of use

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <div class="links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Use</a>
             <button id="feedback-btn">Share Feedback</button>
         </div>
     </footer>
