amended footer and feedback form

--- a/about.html
+++ b/about.html
@@ -155,16 +155,16 @@
             <!-- Technique cards with expandable details -->
         </div>
     </main>
-
+    <script src="scripts/main.js"></script>
+    <script src="scripts/about.js"></script>
     <footer>
         <div class="links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
-            <button id="feedback-btn">Share Feedback</button>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Use</a>
+            <button onclick="window.location.href='feedback.html'">Share Feedback</button>
         </div>
     </footer>
-
-    <script src="scripts/main.js"></script>
-    <script src="scripts/about.js"></script>
 </body>
 </html>
