--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Use</a>
-            <button id="feedback-btn">Share Feedback</button>
-        </div>
-    </footer>
+
 <script src="scripts/app.js"></script>
+<footer>
+    <div class="links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Use</a>
+        <button onclick="window.location.href='feedback.html'">Share Feedback</button>
+    </div>
+</footer>
 </body>
 </html>
