--- a/terms.html
+++ b/terms.html
@@ -103,17 +103,15 @@
             </section>
         </div>
     </main>
-
-    <footer>
+<script src="scripts/main.js"></script>
+ <footer>
         <div class="links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="privacy.html">Privacy Policy</a>
             <a href="terms.html">Terms of Use</a>
-            <button id="feedback-btn">Share Feedback</button>
+            <button onclick="window.location.href='feedback.html'">Share Feedback</button>
         </div>
-    </footer>
-
-    <script src="scripts/main.js"></script>
+</footer>
 </body>
 </html>
