--- a/about.html
+++ b/about.html
@@ -141,13 +141,9 @@
             </section>
         
             <section class="safety">
-                <h3>Safety Guidelines and Contraindications</h3>
-                <p class="important">Important: Always practice these techniques while seated or lying down, especially when beginning.</p>
-                <h4>Contraindications:</h4>
-                <ul>
-                    <li>Box Breathing & Instant Zen: Use caution with respiratory conditions or severe anxiety</li>
-                    <li>Wim Hof Method: Not recommended for those with cardiovascular issues, pregnancy, or respiratory conditions</li>
-                </ul>
+                <p class="important">Important: Always practice these techniques while seated or lying down, especially when beginning.
+                    Always consult with a healthcare professional before starting any new exercise or wellness program, especially if you have pre-existing health conditions.</p>
+                </p>
             </section>
         </section>
 
