--- a/feedback.html
+++ b/feedback.html
@@ -1,4 +1,3 @@
-.html
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
@@ -21,43 +20,21 @@
     <main class="feedback-container">
         <div class="form-wrapper">
             <form id="feedbackForm" class="feedback-form">
-                <div class="form-group">
-                    <label for="name">Name (optional)</label>
-                    <input type="text" id="name" name="name" placeholder="Your name">
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email (optional)</label>
-                    <input type="email" id="email" name="email" placeholder="your@email.com">
-                </div>
-
-                <div class="form-group">
-                    <label for="feedback-type">Type of Feedback*</label>
-                    <select id="feedback-type" name="feedbackType" required>
-                        <option value="">Choose a category...</option>
-                        <option value="general">General Feedback</option>
-                        <option value="bug">Report an Issue</option>
-                        <option value="feature">Feature Request</option>
-                        <option value="technique">Breathing Technique Feedback</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="feedback">Your Feedback*</label>
-                    <textarea id="feedback" name="feedback" required 
-                              placeholder="Please share your thoughts..."></textarea>
-                </div>
-
+                <!-- ... existing form groups ... -->
                 <button type="submit" class="submit-btn">Submit Feedback</button>
             </form>
         </div>
     </main>
-    <div class="thank-you-message" id="thank-you-message" style="display: none;">
-        <h2>Thank You!</h2>
-        <p>Your feedback has been submitted successfully.</p>
 
-    <script src="scripts/main.js"></script>
-    <script src="scripts/feedback.js"></script>
+    <footer>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Use</a>
+        </div>
+    </footer>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const themeToggle = document.getElementById('theme-toggle');
@@ -93,7 +70,9 @@
                 try {
                     console.log('Feedback received:', feedback);
                     alert('Thank you for your feedback! We appreciate your input.');
-                    feedbackForm.reset();
+                    setTimeout(() => {
+                        window.location.href = 'index.html';
+                    }, 1000);
                 } catch (error) {
                     console.error('Error submitting feedback:', error);
                     alert('Sorry, there was an error submitting your feedback. Please try again.');
@@ -101,14 +80,5 @@
             });
         });
     </script>
-    <footer>
-        <div class="links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Use</a>
-            <button onclick="window.location.href='feedback.html'">Share Feedback</button>
-        </div>
-    </footer>
 </body>
 </html>
