--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Simple Breathwork</title>
 <link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="styles/feedback.css">
 </head>
 <body>
     <header>
