--- a/exercise.html
+++ b/exercise.html
@@ -16,7 +16,11 @@
                         <div class="arrow-up"></div>
                         <div class="arrow-down"></div>
                     </div>
-                    <div class="breathing-text"></div>
+                    <!-- Replace single breathing-text with container -->
+                    <div class="breathing-text-container">
+                        <div class="main-text"></div>
+                        <div class="sub-text"></div>
+                    </div>
                 </div>
             </div>
             <div class="timer">00:00</div>
@@ -24,6 +28,5 @@
         <button class="exit-btn" onclick="window.location.href='index.html'">Exit</button>
     </div>
     <script src="./scripts/exercise.js"></script>
-    
 </body>
 </html>
