--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         <a href="terms.html">Terms of Use</a>
         <button onclick="window.location.href='feedback.html'">Share Feedback</button>
     </div>
+</div>
+<!-- Add this line - Note the span with an ID -->
+<div class="copyright">
+    © <span id="copyright-year">2024</span> simplebreathwork.com All Rights Reserved.
+</div>
 </footer>
 </body>
 </html>
