added google adsense code snippet to html

--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
         const savedTheme = localStorage.getItem('theme') || 'light';
         document.documentElement.setAttribute('data-theme', savedTheme);
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
