--- a/feedback.html
+++ b/feedback.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/feedback.css">
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
+     crossorigin="anonymous"></script>
 <body>
     <header>
         <nav class="theme-nav">
