--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>Simple Breathwork</title>
 <link rel="stylesheet" href="styles/main.css">
 <link rel="stylesheet" href="styles/feedback.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
