--- a/terms.html
+++ b/terms.html
@@ -33,6 +33,8 @@
         updateThemeButton(savedTheme);
     });
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
