added meta tags in html

--- a/feedback.html
+++ b/feedback.html
@@ -6,9 +6,11 @@
     <title>Share Feedback - Simple Breathwork</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/feedback.css">
-</head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-8592180021114462">
+    </head>
+
 <body>
     <header>
         <nav class="theme-nav">
