--- a/terms.html
+++ b/terms.html
@@ -35,7 +35,8 @@
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
      crossorigin="anonymous"></script>
-</head>
+     <meta name="google-adsense-account" content="ca-pub-8592180021114462">
+    </head>
 <body>
     <header>
         <h1>Terms of Use</h1>
