--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-8592180021114462">
 </head>
 <body>
     <header>
