--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="styles/feedback.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
      crossorigin="anonymous"></script>
+     <meta name="google-adsense-account" content="ca-pub-8592180021114462">     
 </head>
 <body>
     <header>
