--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Box Breathing</h2>
+                        <img src="images/Untitled design.svg" alt="Breathwork meditation" class="card-image">
                         <div class="timing">4-4-4-4</div>
                     </div>
                     <div class="card-back">
-                        <p>Calm Your Mind
-                            Box Breathing involves inhaling, holding, exhaling, and holding your breath for equal counts. This technique activates the parasympathetic nervous system, reducing stress and anxiety while enhancing focus. Practice for 5 minutes, 1-2 times daily, to feel immediate relaxation and improved emotional regulation.</p>
+                        <h2>Calm Your Mind</h2>
+                        <p>Box Breathing involves inhaling, holding, exhaling, and holding your breath for equal counts. This technique activates the parasympathetic nervous system, reducing stress and anxiety while enhancing focus. Practice for 5 minutes, 1-2 times daily, to feel immediate relaxation and improved emotional regulation.</p>
                         <button class="start-btn" onclick="window.location.href='exercise.html?type=box'">Begin Session</button>
                     </div>
                 </div>
@@ -45,11 +46,12 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Instant Zen</h2>
+                        <img src="images/Untitled design.svg" alt="Breathwork meditation" class="card-image">
                         <div class="timing">4-8</div>
                     </div>
                     <div class="card-back">
-                        <p>Find Your Balance
-                            Instant Zen emphasizes a longer exhale compared to the inhale, promoting deep relaxation. This method activates the parasympathetic system, helping you quickly reduce stress and anxiety. Start with 5-10 minutes daily, and you’ll notice calming effects almost immediately.</p>
+                        <h2>Find Your Balance</h2>
+                            <p>Instant Zen emphasizes a longer exhale compared to the inhale, promoting deep relaxation. This method activates the parasympathetic system, helping you quickly reduce stress and anxiety. Start with 5-10 minutes daily, and you’ll notice calming effects almost immediately.</p>
                         <button class="start-btn" onclick="window.location.href='exercise.html?type=48'">Begin Session</button>
                     </div>
                 </div>
@@ -60,11 +62,12 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Wim Hof Method</h2>
+                        <img src="images/Untitled design.svg" alt="Breathwork meditation" class="card-image">
                         <div class="timing">30 x 3</div>
                     </div>
                     <div class="card-back">
-                        <p>Boost Your Resilience
-                            The Wim Hof Method combines deep breathing with breath holds, stimulating both the sympathetic and parasympathetic systems. This technique can enhance oxygen uptake, increase energy, and even boost immune function over time. Practice for 15-20 minutes once a day to experience increased vitality and stress resilience.</p>
+                        <h2>Boost Your Resilience</h2>
+                        <p>The Wim Hof Method combines deep breathing with breath holds, stimulating both the sympathetic and parasympathetic systems. This technique can enhance oxygen uptake, increase energy, and even boost immune function over time. Practice for 15-20 minutes once a day to experience increased vitality and stress resilience.</p>
                         <button class="start-btn" onclick="window.location.href='exercise.html?type=wim-hof'">Begin Session</button>
                     </div>
                 </div>
