--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
                     </div>
                 </div>
             </div>
+                        <!-- Belly Breathing Card -->
+                        <div class="card" data-technique="belly">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <h2>Belly Breathing</h2>
+                                    <!-- Using the same placeholder image, replace if you have a specific one -->
+                                    <img src="images/Untitled design.svg" alt="Diaphragmatic breathing" class="card-image">
+                                    <div class="timing">4-6 Rhythm</div> <!-- Example timing -->
+                                </div>
+                                <div class="card-back">
+                                    <h2>Deep Relaxation</h2>
+                                    <p>Focus on breathing deep into your belly, allowing it to gently rise on the inhale and fall on the exhale. This engages the diaphragm for calming, efficient breaths, activating the body's relaxation response. Inhale slowly through your nose, exhale slowly through your nose or mouth. Practice for 5-10 minutes, 1-2 times daily or whenever feeling stressed, to notice reduced tension and increased calm..</p>
+                                    <button class="start-btn" onclick="window.location.href='exercise.html?type=belly'">Begin Session</button>
+                                </div>
+                            </div>
+                        </div>
+            
+                        <!-- Buteyko (Reduced Breathing) Card -->
+                        <div class="card" data-technique="buteyko">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <h2>Buteyko Breathing</h2> <!-- Focus on the pattern, related to Buteyko -->
+                                    <!-- Using the same placeholder image, replace if you have a specific one -->
+                                    <img src="images/Untitled design.svg" alt="Gentle breathing" class="card-image">
+                                    <div class="timing">Gentle Pauses</div> <!-- Example timing description -->
+                                </div>
+                                <div class="card-back">
+                                    <h2>Calm & Balance</h2>
+                                    <p>Inspired by Buteyko principles, this exercise uses gentle, light nasal breathing with brief, comfortable pauses after exhaling. It aims to normalize breathing patterns and gently increase CO2 tolerance, promoting calm and nervous system balance. Always breathe softly in and out through your nose. Consistency is key; practice for 5 minutes, 2-3 times daily, focusing on ease, to potentially improve respiratory comfort.</p>
+                                    <button class="start-btn" onclick="window.location.href='exercise.html?type=buteyko'">Begin Session</button>
+                                </div>
+                            </div>
+                        </div>
         </div>
     </main>
 
