new cards editing
updated multiple things

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <div class="card-front">
                                     <h2>Belly Breathing</h2>
                                     <!-- Using the same placeholder image, replace if you have a specific one -->
-                                    <img src="images/Untitled design.svg" alt="Diaphragmatic breathing" class="card-image">
+                                    <img src="images/nose-blue.svg" alt="Diaphragmatic breathing" class="card-image">
                                     <div class="timing">4-6 Rhythm</div> <!-- Example timing -->
                                 </div>
                                 <div class="card-back">
@@ -101,8 +101,8 @@
                                 <div class="card-front">
                                     <h2>Buteyko Breathing</h2> <!-- Focus on the pattern, related to Buteyko -->
                                     <!-- Using the same placeholder image, replace if you have a specific one -->
-                                    <img src="images/Untitled design.svg" alt="Gentle breathing" class="card-image">
-                                    <div class="timing">Gentle Pauses</div> <!-- Example timing description -->
+                                    <img src="images/nose.svg" alt="Gentle breathing" class="card-image">
+                                    <div class="timing">Inhale-Exhale-Pause</div> <!-- Example timing description -->
                                 </div>
                                 <div class="card-back">
                                     <h2>Calm & Balance</h2>
