--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Box Breathing</h2>
-                        <img src="images/Untitled design.svg" alt="Breathwork meditation" class="card-image" width="150" height="150">
+                        <img src="images/Untitled design.svg" alt="a head with inhale arrow towards nose and exhale arrow out the mouth" class="card-image" width="150" height="150">
                         <div class="timing">4-4-4-4</div>
                     </div>
                     <div class="card-back">
@@ -52,7 +52,7 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Instant Zen</h2>
-                        <img src="images/Untitled design.svg" alt="Breathwork meditation" class="card-image" width="150" height="150">
+                        <img src="images/Untitled design.svg" alt="a head with inhale arrow towards nose and exhale arrow out the mouth" class="card-image" width="150" height="150">
                         <div class="timing">4-8</div>
                     </div>
                     <div class="card-back">
@@ -68,7 +68,7 @@
                 <div class="card-inner">
                     <div class="card-front">
                         <h2>Wim Hof Method</h2>
-                        <img src="images/Untitled design.svg" alt="Breathwork meditation" class="card-image" width="150" height="150">
+                        <img src="images/Untitled design.svg" alt="a head with inhale arrow towards nose and exhale arrow out the mouth" class="card-image" width="150" height="150">
                         <div class="timing">30 x 3</div>
                     </div>
                     <div class="card-back">
@@ -84,7 +84,7 @@
                                 <div class="card-front">
                                     <h2>Belly Breathing</h2>
                                     <!-- Using the same placeholder image, replace if you have a specific one -->
-                                    <img src="images/nose-blue.svg" alt="Diaphragmatic breathing" class="card-image" width="150" height="150">
+                                    <img src="images/nose-blue.svg" alt="Nose with inhale exhale arrows" class="card-image" width="150" height="150">
                                     <div class="timing">4-6 Rhythm</div> <!-- Example timing -->
                                 </div>
                                 <div class="card-back">
@@ -101,7 +101,7 @@
                                 <div class="card-front">
                                     <h2>Buteyko Breathing</h2> <!-- Focus on the pattern, related to Buteyko -->
                                     <!-- Using the same placeholder image, replace if you have a specific one -->
-                                    <img src="images/nose.svg" alt="Gentle breathing" class="card-image" width="150" height="150">
+                                    <img src="images/nose.svg" alt="Nose with inhale exhale arrows" class="card-image" width="150" height="150">
                                     <div class="timing">Inhale-Exhale-Pause</div> <!-- Example timing description -->
                                 </div>
                                 <div class="card-back">
