--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about Simple Breathwork. Our mission is to provide FREE, accessible, science-backed breathwork exercises. Explore the benefits & practice guides.">
     <title>About Us - Simple Breathwork</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/about.css">
