--- a/exercise.html
+++ b/exercise.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Start your FREE guided breathwork session. Follow the simple visual guide and timer to practice techniques like Box Breathing or Wim Hof. Find calm now!">
     <title>Breathing Exercise</title>
     <link rel="stylesheet" href="styles/exercise.css">
 </head>
