--- a/feedback.html
+++ b/feedback.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Have feedback for Simple Breathwork? Use our quick form to share your thoughts, report issues, or suggest new features for our free breathwork exercises.">
     <title>Share Feedback - Simple Breathwork</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/feedback.css">
