--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Simple Breathwork Privacy Policy: Understand how we collect, use & protect your data. Details on information handling, cookies, AdSense & your GDPR rights.">
     <title>Privacy Policy - Simple Breathwork</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/legal.css">
