--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Review the Terms of Use for Simple Breathwork. Understand user responsibilities, intellectual property, liability limits & our important medical disclaimer.">
     <title>Terms of Use - Simple Breathwork</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/legal.css">
