--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Find FREE, easy-to-follow visual guides for breathwork exercises like Box Breathing, 4-8 Zen & Wim Hof. Reduce stress & anxiety instantly. Start now!">
 <title>Simple Breathwork</title>
-<link rel="stylesheet" href="styles/main.css">
+<link rel="preload" href="styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="styles/main.css"></noscript>
 <link rel="stylesheet" href="styles/feedback.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
      crossorigin="anonymous"></script>
