--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
     </main>
 
-<script src="scripts/app.js"></script>
+    <script defer src="scripts/app.js"></script>
 <footer>
     <div class="links">
         <a href="index.html">Home</a>
