--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <title>Simple Breathwork</title>
 <link rel="preload" href="styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="styles/main.css"></noscript>
+<link rel="preload" href="/scripts/app.js" as="script">
+
 <link rel="stylesheet" href="styles/feedback.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
      crossorigin="anonymous"></script>
