--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Find FREE, easy-to-follow visual guides for breathwork exercises like Box Breathing, 4-8 Zen & Wim Hof. Reduce stress & anxiety instantly. Start now!">
 <title>Simple Breathwork</title>
-<link rel="preload" href="styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="styles/main.css"></noscript>
+<link rel="stylesheet" href="styles/optimized/critical.css">
+<link rel="preload" href="styles/optimized/non-critical.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="styles/optimized/non-critical.css"></noscript>
 <link rel="preload" href="/scripts/app.js" as="script">
 <link rel="stylesheet" href="styles/feedback.css">
 <meta name="google-adsense-account" content="ca-pub-8592180021114462"> 
