--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Simple Breathwork</title>
         <!-- Critical CSS -->
         <link rel="stylesheet" href="styles/optimized/critical.css">
-        <!-- Non-critical CSS with defer loading -->
+        <!-- Non-critical CSS -->
         <link rel="stylesheet" href="styles/optimized/non-critical.css">
         <link rel="stylesheet" href="styles/feedback.css">
         <meta name="google-adsense-account" content="ca-pub-8592180021114462">
