--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Find FREE, easy-to-follow visual guides for breathwork exercises like Box Breathing, 4-8 Zen & Wim Hof. Reduce stress & anxiety instantly. Start now!">
         <title>Simple Breathwork</title>
-        <!-- Critical CSS -->
-        <link rel="stylesheet" href="styles/optimized/critical.css">
-        <!-- Non-critical CSS -->
-        <link rel="stylesheet" href="styles/optimized/non-critical.css">
+        <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/feedback.css">
         <meta name="google-adsense-account" content="ca-pub-8592180021114462">
     </head>
